Fix missing CSS

--- a/less/admin.less
+++ b/less/admin.less
@@ -16,7 +16,7 @@
 .StatisticsWidget-entity {
   float: left;
   min-width: 130px;
-  padding: 15px 20px;
+  padding: 15px 20px 25px;
   color: @text-color;
   font-size: 20px;
 
@@ -37,6 +37,11 @@
 }
 .StatisticsWidget-change--down {
   color: #d0011b;
+}
+.StatisticsWidget-extra {
+  display: block;
+  color: @muted-more-color;
+  font-size: 11px;
 }
 .StatisticsWidget-heading {
   height: 30px;
